// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OneOfAnt should render a radio button group by default 1`] = `
<RadioGroup
  buttonStyle="outline"
  disabled={false}
  id="id-test_radio_of_one"
  label="Select one of"
  onChange={[Function]}
  readOnly={false}
>
  <Radio
    key="b"
    type="radio"
    value="b"
  >
    Banana
  </Radio>
  <Radio
    key="a"
    type="radio"
    value="a"
  >
    Apples
  </Radio>
  <Radio
    key="p"
    type="radio"
    value="p"
  >
    Peaches
  </Radio>
</RadioGroup>
`;

exports[`OneOfAnt should render a select control by default 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfSelectAnt
    disabled={false}
    id="id-test_radio_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`OneOfFormAnt should render a radio button group by default 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfAnt
    disabled={false}
    id="id-test_radio_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`OneOfSelectAnt should render a select control by default 1`] = `
<Select
  choiceTransitionName="zoom"
  disabled={false}
  id="id-test_radio_of_one"
  label="Select one of"
  mode="default"
  onChange={[Function]}
  readOnly={false}
  showSearch={false}
  transitionName="slide-up"
  value=""
>
  <Option
    key="b"
    value="b"
  >
    Banana
  </Option>
  <Option
    key="a"
    value="a"
  >
    Apples
  </Option>
  <Option
    key="p"
    value="p"
  >
    Peaches
  </Option>
</Select>
`;
